Fixed Media Query Problem by moving Media Query code to the bottom of style.css

--- a/contact_velabri.html
+++ b/contact_velabri.html
@@ -126,7 +126,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="number" id="label-header">Number:</label>
-                                <input type="number" class="form-control" data-required="false" name="phone number">
+                                <input type="text" class="form-control" data-required="false" name="phone number">
                             </div>
                             <div class="form-group">
                                 <label for="email" id="label-header">Email:</label>
