--- a/velabri_get_quote.html
+++ b/velabri_get_quote.html
@@ -99,7 +99,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12">
-                <h2 class="quote-heading">Quote</h2>
+                <h2 class="quote-heading">Tell Us About Your Project</h2>
                 <hr style="width:10%; border-top:5px solid #232929;">
                 <p class="quote-paragraph">Have a project in mind but unsure about cost and timeframe? Fill in the form below and we'll send you a quotation.</p>
             </div>
