Responsive Changes for Mobile and Tablet on multiple Pages

--- a/about_velabri.html
+++ b/about_velabri.html
@@ -152,7 +152,8 @@
                         <p>During our time we've been very lucky to have worked with some fantastic people. </p>
                     </div>
                 </div>
-                
+                </div>
+                <div class="row margin-between">
                  <div class="col-md-12">
                     <div class="col-md-1 col-sm-1 col-xs-3 testimonial-image">
                         <img src="http://i67.tinypic.com/104raqv.jpg" width="80px" height="80px">
@@ -172,7 +173,9 @@
                     </div>
                 </div>
                 </div>
+
                 
+                <div class="row margin-between">
                     <div class="col-md-1 col-sm-1 col-xs-3 testimonial-image">
                         <img src="http://i65.tinypic.com/2na2ryo.jpg" width="80px" height="80px">
                     </div>
