--- a/velabri_get_quote.html
+++ b/velabri_get_quote.html
@@ -112,7 +112,7 @@
         <div class="row">
             <div class="col-md-2"></div>
                <div class="col-md-8">
-               <p style="font-family:'open sans', 'sans-serif' ; font-size:36px; text-align:center; text-transform: bold;">Get A <span style="color:#32c4e9">Free Quote</span> Now<p>
+               <p style="font-family:'open sans', 'sans-serif' ; font-size:32px; text-align:center; text-transform: bold; line-height:36px">Get A <span style="color:#32c4e9">Free Quote</span> Now<p>
                 <form id="quote" method="post" action="">
                     <div class="form-group">
                         <label for="name" id="label-header"></label>
