Used w3c validator to test html and fixed errors

--- a/contact_velabri.html
+++ b/contact_velabri.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -95,12 +95,9 @@
     <div class="jumbotron-section">
         <div class="jumbotron-content">
             <h2>Velabri <span> | </span> Contact Us</h2>
-
         </div>
         <div class="scroll-down"></div>
-           
-        </div>
-    
+    </div>
     <div class="contact-us-page">
         <div class="contact-header">
             <div class="container">
@@ -119,21 +116,21 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12 contact-form">
                         <h3 style="font-size:36px; font-family: 'open sans'; margin-bottom:55px;">Send us an Email!</h3>
-                        <form id="contact" method="post" action="">
+                        <form id="contact-form" method="post" action="">
                             <div class="form-group">
-                                <label for="name" id="label-header">Name:</label>
+                                <label for="name" id="label-header1">Name:</label>
                                 <input type="text" class="form-control" name="name">
                             </div>
                             <div class="form-group">
-                                <label for="number" id="label-header">Number:</label>
+                                <label for="number" id="label-header2">Number:</label>
                                 <input type="text" class="form-control" data-required="false" name="phone number">
                             </div>
                             <div class="form-group">
-                                <label for="email" id="label-header">Email:</label>
+                                <label for="email" id="label-header3">Email:</label>
                                 <input type="email" class="form-control" data-required="false" name="email">
                             </div>
                             <div class="form-group">
-                                <label for="message" id="label-header">Message:</label>
+                                <label for="message" id="label-header4">Message:</label>
                                 <textarea class="form-control" name="message"></textarea>
                             </div>
                             <button type="submit" class="btn btn-primary contact-btn">Submit</button>
@@ -188,7 +185,6 @@
     </div>
     <div id="map-canvas"></div>
     <script>
-
     function initMap() {
         var uluru = {
             lat: 52.414832,
@@ -225,7 +221,7 @@
                     <p class="center-header">Contact Velabri.</p>
                     <p class="footer-paragraph"><i class="fa fa-map-marker"></i> Listowel, Co.Kerry, Ireland</p>
                     <p class="footer-paragraph"><i class="fa fa-phone"></i> (+353) 86-8875747</p>
-                    <p class="footer-paragraph"><i class="fa fa-envelope"></i> info@velabri.co</a>
+                    <p class="footer-paragraph"><i class="fa fa-envelope"></i> info@velabri.co
                     </p>
                 </div>
                 <div class="footer-right col-md-4 col-sm-4">
