--- a/velabri_get_quote.html
+++ b/velabri_get_quote.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -113,26 +113,26 @@
             <div class="col-md-2"></div>
                <div class="col-md-8">
                <p style="font-family:'open sans', 'sans-serif' ; font-size:32px; text-align:center; text-transform: bold; line-height:36px">Get A <span style="color:#32c4e9">Free Quote</span> Now<p>
-                <form id="quote" method="post" action="">
+                <form id="quote-form" method="post" action="">
                     <div class="form-group">
                         <label for="name" id="label-header"></label>
                         <input type="text" class="form-control" name="name" size="10" maxlength="30" placeholder="Name*">
                     </div>
                 
                     <div class="form-group">
-                        <label for="number" id="label-header"></label>
+                        <label for="number" id="label-header1"></label>
                         <input type="text" class="form-control" data-required="false" name="email" size="10" maxlength="40" placeholder="Phone Number*">
                     </div>
                     <div class="form-group">
-                        <label for="email" id="label-header"></label>
+                        <label for="email" id="label-header2"></label>
                         <input type="text" class="form-control" name="name" size="10" maxlength="40" placeholder="Email Address*">
                     </div>
                     <div class="form-group">
-                        <label for="url" id="label-header"></label>
+                        <label for="url" id="label-header3"></label>
                         <input type="text" class="form-control" name="name" size="10" maxlength="40" placeholder="Your Website Url">
                     </div>
                     <div class="form-group">
-                        <label for="message" id="label-header"></label>
+                        <label for="message" id="label-header4"></label>
                         <textarea class="form-control" name="message" rows="6" cols="40" placeholder="Project Details*"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary quote-btn">Submit</button>
