Cleaned up some code and changed some colors

--- a/about_velabri.html
+++ b/about_velabri.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Monoton" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Open+Sans+Condensed:300|Roboto:900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Open+Sans+Condensed:300|Roboto:900" rel="stylesheet"><link rel="icon" type="image/png" href="http://i66.tinypic.com/vd1ddw.png" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Velabri About Us Page</title>
 </head>
 
@@ -101,7 +102,7 @@
             <div class="row">
                 <div class="col lg-12 col-md-12 col-sm-12 about-text">
                     <h5 class="about-text-header">Who Are We?</h5>
-                    <hr style="width:10%; border-top:5px solid #232929; text-align: left;">
+                    <hr style="width:10%; border-top:5px solid #000;">
                     <img src="http://i64.tinypic.com/r757qc.jpg" height="500" width="370" style="float:right; margin:10px 0 0 40px;"/>
                     <p>We are a Web Design and Development company based in Listowel, Co.Kerry. Our Journey began in 2011 when we built our first online business Primovisto which is still in operation today. Through our work with Primovisto we became more and more involved in web design and development and that involvement lead to us setting up Velabri in 2013.
                     
@@ -123,7 +124,7 @@
             <div class="row">
                 <div class="col-md-12 team-header">
                     <h2>Meet the Team</h2>
-                    <hr style="width:10%; border-top:5px solid #232929;">
+                    <hr style="width:10%; border-top:5px solid #000;">
                 </div>
                 <div class="col-md-4 team-image">
                     <img class=" ed-team-image" src="http://i68.tinypic.com/28v8tb9.jpg">
@@ -148,7 +149,7 @@
                 <div class="col-md-12">
                     <div class="testimonial-header">
                         <h2>What Others Say About Us</h2>
-                        <hr style="width:10%; border-top:5px solid #232929;">
+                        <hr style="width:10%; border-top:5px solid #000;">
                         <p>During our time we've been very lucky to have worked with some fantastic people. </p>
                     </div>
                 </div>
