--- a/velabri_portfolio.html
+++ b/velabri_portfolio.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Open+Sans+Condensed:300|Roboto:900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Open+Sans+Condensed:300|Roboto:900" rel="stylesheet"><link rel="icon" type="image/png" href="http://i66.tinypic.com/vd1ddw.png" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Velabri - Portfolio Page</title>
 </head>
 
@@ -101,7 +101,7 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 portfolio-page-header">
                         <h2>Welcome to the Velabri Portfolio</h2>
-                        <hr style="width:10%; border-top:5px solid #232929;">
+                        <hr style="width:10%; border-top:5px solid #000;">
                         <p>Check out some of the cool projects we've completed. We're proud to have been involved in helping to build these businesses! </p>
                     </div>
                 </div>
