--- a/contact_velabri.html
+++ b/contact_velabri.html
@@ -14,6 +14,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Open+Sans+Condensed:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
+    <link rel="icon" type="image/png" href="http://i66.tinypic.com/vd1ddw.png" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Velabri Contact Us Page</title>
 </head>
 
@@ -104,7 +106,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-12 col-lg-12">
                         <h2 class="contact-heading">Get In Touch</h2>
-                        <hr style="width:10%; border-top:5px solid #232929;">
+                        <hr style="width:10%; border-top:5px solid #000;">
                         <p class="contact-paragraph">
                             Looking to get your company online? Want to bring your business to the next level with an online store? Or just have a great idea that you need to tell the world about?! Get in touch with us and let us help you make that happen! </p>
                     </div>
