--- a/contact_velabri.html
+++ b/contact_velabri.html
@@ -121,19 +121,19 @@
                         <form id="contact-form" method="post" action="">
                             <div class="form-group">
                                 <label for="name" id="label-header1">Name:</label>
-                                <input type="text" class="form-control" name="name">
+                                <input type="text" class="form-control" name="name" required="" autofocus>
                             </div>
                             <div class="form-group">
                                 <label for="number" id="label-header2">Number:</label>
-                                <input type="text" class="form-control" data-required="false" name="phone number">
+                                <input type="text" class="form-control" required="" name="phone number">
                             </div>
                             <div class="form-group">
                                 <label for="email" id="label-header3">Email:</label>
-                                <input type="email" class="form-control" data-required="false" name="email">
+                                <input type="email" class="form-control" required="" name="email">
                             </div>
                             <div class="form-group">
                                 <label for="message" id="label-header4">Message:</label>
-                                <textarea class="form-control" name="message"></textarea>
+                                <textarea class="form-control" name="message" required=""></textarea>
                             </div>
                             <button type="submit" class="btn btn-primary contact-btn">Submit</button>
                         </form>
