--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
     </div>
     <nav class="navbar navbar-inverse visible-xs">
-        <div class="container ">
+        <div class="container resp-menu">
             <div class="nav navbar-header">
                 <a class="navbar-brand" href="index.html" style="color:#32c4e9">Menu</a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myCollapsingList">
