Added jQuery Box shadow to Testimonial Images on About Us Page

--- a/contact_velabri.html
+++ b/contact_velabri.html
@@ -135,7 +135,7 @@
                                 <label for="message" id="label-header4">Message:</label>
                                 <textarea class="form-control" name="message" required=""></textarea>
                             </div>
-                            <button type="submit" class="btn btn-primary contact-btn">Submit</button>
+                            <button type="submit" class="btn btn-primary contact-btn" onclick="return confirm('Thank you for contacting us!')">Submit</button>
                         </form>
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-12 contact-text">
