--- a/about_velabri.html
+++ b/about_velabri.html
@@ -157,7 +157,7 @@
                 <div class="row margin-between">
                  <div class="col-md-12">
                     <div class="col-md-1 col-sm-1 col-xs-3 testimonial-image">
-                        <img src="http://i67.tinypic.com/104raqv.jpg" width="80" height="80" alt="Child of Haiti">
+                        <img src="http://i67.tinypic.com/104raqv.jpg" width="80" height="80" alt="Child of Haiti" id="test-img1">
                     </div>
                     <div class="col-md-5 col-sm-5 col-xs-9 testimonial-text">
                         <p>"Velabri were totally professional in all our dealings with them. We're delighted with the service they provided and would recommend them to anyone."</p>
@@ -165,7 +165,7 @@
                         <p class="testimonial-title">CEO - Child of Haiti</p>
                     </div>
                     <div class="col-md-1 col-sm-1 col-xs-3 testimonial-image">
-                        <img src="http://i66.tinypic.com/103heuv.jpg" width="80" height="80" alt="Ring of Kerry Cycle Store">
+                        <img src="http://i66.tinypic.com/103heuv.jpg" width="80" height="80" alt="Ring of Kerry Cycle Store" id="test-img2">
                     </div>
                     <div class="col-md-5 col-sm-5 col-xs-9 testimonial-text">
                         <p>"We were very satisfied with Velabri's work. Their communication was second to none and they really understood what we were looking for."</p>
@@ -178,7 +178,7 @@
                 
                 <div class="row margin-between">
                     <div class="col-md-1 col-sm-1 col-xs-3 testimonial-image">
-                        <img src="http://i65.tinypic.com/2na2ryo.jpg" width="80" height="80" alt="MaxDev Inc">
+                        <img src="http://i65.tinypic.com/2na2ryo.jpg" width="80" height="80" alt="MaxDev Inc" id="test-img3">
                     </div>
                     <div class="col-md-5 col-sm-5 col-xs-9 testimonial-text">
                         <p>"We found Velabri to be a great choice for our web project. The listened to our vision and recreated it just as we had hoped." </p>
@@ -186,7 +186,7 @@
                         <p class="testimonial-title">CEO - MaxDev Inc.</p>
                     </div>
                     <div class="col-md-1 col-sm-1 col-xs-3 testimonial-image">
-                        <img src="http://i67.tinypic.com/25qbwuq.jpg" width="80" height="80" alt="Telecom Property">
+                        <img src="http://i67.tinypic.com/25qbwuq.jpg" width="80" height="80" alt="Telecom Property" id="test-img4">
                     </div>
                     <div class="col-md-5 col-sm-5 col-xs-9 testimonial-text">
                         <p>"We couldn't have made a better choice in choosing Velabri to design our website. They really know what they are doing." </p>
