--- a/velabri_get_quote.html
+++ b/velabri_get_quote.html
@@ -121,7 +121,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="number" id="label-header1"></label>
-                                    <input type="text" class="form-control" data-required="false" name="email" size="10" maxlength="40" placeholder="Phone Number*">
+                                    <input type="text" class="form-control" data-required="false" name="email" size="10" maxlength="40" placeholder="Phone Number*" pattern ="[0-9]{10}" title="Mobile Phone Number Expected Beginning 08********" type="tel" >
                                 </div>
                                 <div class="form-group">
                                     <label for="email" id="label-header2"></label>
